[package]

name = "quilt-net-network"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "network"

[dependencies.log_ng]
git = "https://github.com/sfackler/log-ng.git"

[dependencies.quilt-net-misc]
path = "../misc"

[dependencies.quilt-net-data-link-interface]
path = "../data_link/interface"
