[package]

name = "quilt-net-network"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "network"

[dependencies]
bitflags = "0.7"
log = { version = "0.3.6", default-features = false }

[dependencies.quilt-net-misc]
path = "../misc"

[dependencies.quilt-net-data-link-interface]
path = "../data_link/interface"

[dev-dependencies]
env_logger = "0.3.1"
