[package]

name = "quilt-net-network"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "network"

[dependencies]
bitflags = "0.7"
log = { version = "0.3.6", default-features = false }

quilt-net-misc = { path = "../misc" }
quilt-net-data-link-interface = { path = "../data_link/interface" }

[dev-dependencies]
env_logger = "0.3.1"

quilt-net-data-link-udp-mock = { path = "../data_link/udp_mock" }
quilt-net-transport-static-routing = { path = "../transport/static_routing" }
