[package]

name = "rust-net-data-link-udp-mock"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "udp_mock"

[dependencies.log_ng]
git = "https://github.com/sfackler/log-ng.git"

[dependencies.rust-net-misc]
path = "../../misc"

[dependencies.rust-net-data-link-interface]
path = "../interface"
