[package]

name = "quilt-net-data-link-udp-mock"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "udp_mock"

[dependencies.log]
version = "0.3.6"
default-features = false

[dependencies.quilt-net-misc]
path = "../../misc"

[dependencies.quilt-net-data-link-interface]
path = "../interface"

[dev-dependencies]
env_logger = "0.3.1"
