[package]

name = "quilt-net-transport-brown-rip"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "brown_rip"

[dependencies.time]
url = "http://github.com/rust-lang/time"

[dependencies.quilt-net-misc]
path = "../../misc"

[dependencies.quilt-net-network]
path = "../../network"
