[package]

name = "rust-net-transport-static-routing"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "static_routing"


[dependencies.rust-net-misc]
path = "../../misc"

[dependencies.rust-net-network]
path = "../../network"
