[package]

name = "quilt-net-transport-static-routing"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "static_routing"


[dependencies.quilt-net-misc]
path = "../../misc"

[dependencies.quilt-net-network]
path = "../../network"
