[package]

name = "quilt-net-transport-static-routing"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "static_routing"

[dependencies]
log = { version = "0.3.6", default-features = false }

quilt-net-misc = { path = "../../misc" }
quilt-net-network = { path = "../../network" }
