[package]

name = "rust-net-transport-tcp"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "tcp"

[dependencies.time]
url = "http://github.com/rust-lang/time"

[dependencies.rust-net-misc]
path = "../../misc"

[dependencies.rust-net-network]
path = "../../network"

[dependencies.cyclic-order]
path = "../../cyclic_order"


[dev-dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"
