[package]

name = "quilt-net-transport-tcp"
version = "0.0.1"
authors = [ "Anson Rosenthal <anson.rosenthal@gmail.com>"
          , "John Ericson <Ericson2314@Yahoo.com>" ]

[lib]
name = "tcp"

[dependencies]
time = { url = "http://github.com/rust-lang/time" }

quilt-net-misc = { path = "../../misc" }
quilt-net-network = { path = "../../network" }
cyclic-order = { path = "../../cyclic_order" }

[dev-dependencies]
quickcheck_macros = { git = "https://github.com/BurntSushi/quickcheck" }
